--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
   <groupId>com.kalyani.org</groupId>
   <artifactId>kalyani</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
+
+  <name>kalyani</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -16,4 +27,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 </project>
